feat: Single distribution bundle for CE / EE